Closed
Bug 797583
Opened 13 years ago
Closed 13 years ago
Assertion fails when getting Components via proto chain
Categories
(Core :: XPConnect, defect)
Tracking
()
RESOLVED
FIXED
mozilla18
People
(Reporter: jruderman, Unassigned)
References
Details
(Keywords: assertion, regression, testcase)
Attachments
(3 files)
Assertion failure: JS_GetGlobalForObject(cx, obj) == JS_ObjectToInnerObject(cx, obj), at /Users/jruderman/trees/mozilla-central/js/xpconnect/src/XPCComponents.cpp:4792
Assertion added in bug 795275.
| Reporter | ||
Comment 1•13 years ago
|
||
Comment 2•13 years ago
|
||
Yeah, this assertion is just dumb.
Attachment #667692 -
Flags: review?(mrbkap)
Updated•13 years ago
|
Attachment #667692 -
Flags: review?(mrbkap) → review+
Comment 3•13 years ago
|
||
Comment 4•13 years ago
|
||
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla18
You need to log in
before you can comment on or make changes to this bug.
Description
•