Bug 797583 - Remove bogus assertion. r=mrbkap